--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       </section>
       <footer>
         <p>Made by <a href="https://touchlab.co">TOUCHLAB</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>/<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
