--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 header, footer {
-  border-radius: .2em;
+  border-radius: .3em;
   background-color: #eeeeff;
-  padding: .3em;
+  padding: 1em;
 }
