--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@
 @import "{{ site.theme }}";
 header, footer {
   border-radius: .3em;
-  background-color: #eeeeff;
+  background-color: #6666aa;
+  color: #ffffff;
   padding: 1em;
 }
