--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,10 @@ header, footer {
   padding: 1em;
 }
 
+header h1, footer h1, header h2, footer h2, header h3, footer h3{
+  color: #ffffff;
+}
+
 header a, footer a{
   color: rgb(60,209,157);
   font-weight: bold;
