--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,11 @@
 body {
   padding: 1em;
   background-color: rgb(240,240,240);
+  color: rgb(15,40,60);
+}
+
+a:hover {
+  color: rgb(108,209,139);
 }
 
 header, footer {
