--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,11 @@ body {
   color: rgb(15,40,60);
 }
 
+a {
+  font-weight: bold;
+  color: rgb(15,40,60);
+}
+
 a:hover {
   color: rgb(108,209,139);
 }
