--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         {% endif %}
 
+<p class="view"><a href="/">Home</a></p>
 <p class="view"><a href="basicquickstart.html">Basic Quickstart</a></p>
 <p class="view"><a href="configj2objc.html">Config J2objc Runtime</a></p>
 
