--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 
       </section>
       <footer>
-        <p>Made by <a href="https://touchlab.co">6ccea1
+        <p>Made by <a href="https://touchlab.co" style="font-size: 14sp">
           <span style="color: #5ec9de">T</span><span style="color: #61cecf">O</span><span style="color: #64ceb9">U</span><span style="color: #6ccea1">C</span><span style="color: #85ce91">H</span><span style="color: #b0cf59">L</span><span style="color: #dace4e">A<span style="color: #f5e159">B</span>
         </a></p>
         <p><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>/<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
