--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,6 +22,31 @@ a:hover {
   color: white;
 }
 
+.touchlablogo .t{
+  color: #5ec9de;
+}
+.touchlablogo .o{
+  color: #61cecf;
+}
+.touchlablogo .u{
+  color: #64ceb9;
+}
+.touchlablogo .c{
+  color: #6ccea1;
+}
+.touchlablogo .h{
+  color: #85ce91;
+}
+.touchlablogo .l{
+  color: #b0cf59;
+}
+.touchlablogo .a{
+  color: #dace4e;
+}
+.touchlablogo .b{
+  color: #f5e159;
+}
+
 header, footer {
   border-radius: .3em;
   background-color: rgb(15,40,60);
