--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
       </section>
       <footer>
         <p>Made by <a href="https://touchlab.co" style="font-size: 14pt" class="touchlablogo">
-          <span class="t">T</span><span style="color: #61cecf">O</span><span style="color: #64ceb9">U</span><span style="color: #6ccea1">C</span><span style="color: #85ce91">H</span><span style="color: #b0cf59">L</span><span style="color: #dace4e">A<span style="color: #f5e159">B</span>
+          <span class="t">T</span><span class="o">O</span><span class="u">U</span><span class="c">C</span><span class="h">H</span><span class="l">L</span><span class="a">A<span class="b">B</span>
         </a></p>
         <p><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>/<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
       </footer>
