--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,11 +18,11 @@ a:hover {
   color: rgb(108,209,139);
 }
 
-.touchlablogo a:hover span.t {
+.touchlablogo a:hover .t {
   color: white !important;
 }
 
-.touchlablogo .t{
+.touchlablogo a .t{
   color: #5ec9de;
 }
 .touchlablogo .o{
