--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,25 +33,25 @@ a:hover {
 .touchlablogo a .t{
   color: #5ec9de;
 }
-.touchlablogo .o{
+.touchlablogo a .o{
   color: #61cecf;
 }
-.touchlablogo .u{
+.touchlablogo a .u{
   color: #64ceb9;
 }
-.touchlablogo .c{
+.touchlablogo a .c{
   color: #6ccea1;
 }
-.touchlablogo .h{
+.touchlablogo a .h{
   color: #85ce91;
 }
-.touchlablogo .l{
+.touchlablogo a .l{
   color: #b0cf59;
 }
-.touchlablogo .a{
+.touchlablogo a .a{
   color: #dace4e;
 }
-.touchlablogo .b{
+.touchlablogo a .b{
   color: #f5e159;
 }
 
