--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,7 +33,7 @@ a:hover {
 .touchlablogo a .t{
   color: #5ec9de;
 }
-.touchlablogo a .o{
+.touchlablogo a span.o{
   color: #61cecf;
 }
 .touchlablogo a .u{
@@ -45,7 +45,7 @@ a:hover {
 .touchlablogo a .h{
   color: #85ce91;
 }
-.touchlablogo a .l{
+.touchlablogo a span.l{
   color: #b0cf59;
 }
 .touchlablogo a .a{
