--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,28 +30,28 @@ a:hover {
   color: white !important;
 }
 
-.touchlablogo a .t{
+.touchlablogo .t{
   color: #5ec9de;
 }
-.touchlablogo a span.o{
+.touchlablogo .o{
   color: #61cecf;
 }
-.touchlablogo a .u{
+.touchlablogo .u{
   color: #64ceb9;
 }
-.touchlablogo a .c{
+.touchlablogo .c{
   color: #6ccea1;
 }
-.touchlablogo a .h{
+.touchlablogo .h{
   color: #85ce91;
 }
-.touchlablogo a span.l{
+.touchlablogo .l{
   color: #b0cf59;
 }
-.touchlablogo a .a{
+.touchlablogo .a{
   color: #dace4e;
 }
-.touchlablogo a .b{
+.touchlablogo .b{
   color: #f5e159;
 }
 
