--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,16 +18,8 @@ a:hover {
   color: rgb(108,209,139);
 }
 
-.touchlablogo a:hover .t,
-.touchlablogo a:hover .o,
-.touchlablogo a:hover .u,
-.touchlablogo a:hover .c,
-.touchlablogo a:hover .h,
-.touchlablogo a:hover .l,
-.touchlablogo a:hover .a,
-.touchlablogo a:hover .b
+.touchlablogo a:hover
  {
-  color: white !important;
   text-decoration: underline;
 }
 
