--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ a:hover {
   color: rgb(108,209,139);
 }
 
-.touchlablogo a:hover
+.touchlablogo a:hover span
  {
   text-decoration: underline;
 }
