--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,9 +18,9 @@ a:hover {
   color: rgb(108,209,139);
 }
 
-.touchlablogo a:hover span
+.touchlablogo a, .madeby
  {
-  text-decoration: underline;
+  font-size: 14pt;
 }
 
 .touchlablogo .t{
