--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 
       </section>
       <footer>
-        <p>Made by <a href="https://touchlab.co" style="font-size: 14pt" class="touchlablogo">
+        <p class="madeby">Made by <a href="https://touchlab.co" class="touchlablogo">
           <span class="t">T</span><span class="o">O</span><span class="u">U</span><span class="c">C</span><span class="h">H</span><span class="l">L</span><span class="a">A<span class="b">B</span>
         </a></p>
         <p><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>/<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
