--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,19 +21,13 @@
         <a href="{{ site.github.url }}"> <h1>{{ site.title | default: site.github.repository_name }}</h1> </a>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-        {% endif %}
-
-<p class="view"><a href="/">Home</a></p>
-<p class="view"><a href="basicquickstart.html">Basic Quickstart</a></p>
-<p class="view"><a href="configj2objc.html">Config J2objc Runtime</a></p>
-
-        {% if site.github.is_user_page %}
+        <span id="topmenu">
+          <p class="view"><a href="/">Home</a></p>
+          <p class="view"><a href="basicquickstart.html">Basic Quickstart</a></p>
+          <p class="view"><a href="configj2objc.html">Config J2objc Runtime</a></p>
           <p class="view"><a href="{{ site.github.owner_url }}">View GitHub</a></p>
-        {% endif %}
-
-        <p class="nomargin"><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>/<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
+          <p class="nomargin"><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>/<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
+        </span>
       </header>
       <section>
 
