--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         <a href="{{ site.github.url }}"> <h1>{{ site.title | default: site.github.repository_name }}</h1> </a>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <span id="topmenu">
+        <span class="topmenu">
           <p class="view"><a href="/">Home</a></p>
           <p class="view"><a href="basicquickstart.html">Basic Quickstart</a></p>
           <p class="view"><a href="configj2objc.html">Config J2objc Runtime</a></p>
