--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -79,6 +79,6 @@ p.madeby, p.nomargin {
 
 @media print, screen and (max-width: 960px) {
   .topmenu {
-    display: none;
+    /*display: none;*/
   }
 }
