--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
           <p class="view"><a href="{{ site.github.owner_url }}">View GitHub</a></p>
           <p class="nomargin"><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>/<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
         </span>
+        <p class="madeby">Made by <a href="https://touchlab.co" class="touchlablogo">
+          <span class="t">T</span><span class="o">O</span><span class="u">U</span><span class="c">C</span><span class="h">H</span><span class="l">L</span><span class="a">A<span class="b">B</span>
+        </a></p>
       </header>
       <section>
 
