--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -73,12 +73,18 @@ header p.view  {
   margin:0 0 10px;
 }
 
-p.madeby, p.nomargin {
+p.madeby {
   margin:0;
 }
 
 @media print, screen and (max-width: 960px) {
   .topmenu {
     /*display: none;*/
+  }
+}
+
+@media print, screen and (min-width: 960px) {
+  footer {
+    display: none;
   }
 }
