--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
           <p class="view"><a href="/">Home</a></p>
           <p class="view"><a href="basicquickstart.html">Basic Quickstart</a></p>
           <p class="view"><a href="configj2objc.html">Config J2objc Runtime</a></p>
-          <p class="view"><a href="gradlehistory.html">Project History</a></p>
           <p class="view"><a href="{{ site.github.owner_url }}">View GitHub</a></p>
+          <p class="view"><small><a href="https://doppllib.github.io/">Doppl Project</a></small></p>
           <p class="nomargin"><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>&nbsp;/&nbsp;<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
         </span>
         <p class="madeby">Made by <a href="https://touchlab.co" class="touchlablogo">
