--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 
         <span class="topmenu">
           <p class="view"><a href="/">Home</a></p>
-          <p class="view"><a href="basicquickstart.html">Basic Quickstart</a></p>
+          <p class="view"><a href="basicquickstart.html">Basic Quickstart / Tutorials</a></p>
           <p class="view"><a href="configj2objc.html">Config J2objc Runtime</a></p>
           <p class="view"><a href="{{ site.github.owner_url }}">View GitHub</a></p>
           <p class="view"><small><a href="https://doppllib.github.io/">Doppl Project</a></small></p>
