--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
 
         <span class="topmenu">
           <p class="view"><a href="/">Home</a></p>
-          <p class="view"><a href="basicquickstart.html">Basic Quickstart / Tutorials</a></p>
-          <p class="view"><a href="configj2objc.html">Config J2objc Runtime</a></p>
+          <p class="view"><a href="/basicquickstart.html">Basic Quickstart / Tutorials</a></p>
+          <p class="view"><a href="/configj2objc.html">Config J2objc Runtime</a></p>
           <p class="view"><a href="{{ site.github.owner_url }}">View GitHub</a></p>
           <p class="view"><small><a href="https://doppllib.github.io/">Doppl Project</a></small></p>
           <p class="nomargin"><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>&nbsp;/&nbsp;<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
