--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width">
 
     <meta http-equiv="Expires" content="-1" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -23,7 +24,11 @@
 
         <span class="topmenu">
           <p class="view"><a href="/">Home</a></p>
-          <p class="view"><a href="/basicquickstart.html">Basic Quickstart / Tutorials</a></p>
+          <p class="view"><a href="#" onclick="showSubMenu()">Basic Quickstart / Tutorials</a></p>
+          <p class="view submenu"><small><a href="/basicquickstart.html">Basic Quickstart</a></small></p>
+          <p class="view submenu"><small><a href="/basicsamples/dependencies.html">Dependencies</a></small></p>
+          <p class="view submenu"><small><a href="/basicsamples/testing.html">Testing</a></small></p>
+          <p class="view submenu"><small><a href="/basicsamples/androidstuff.html">Android Stuff</a></small></p>
           <p class="view"><a href="/configj2objc.html">Config J2objc Runtime</a></p>
           <p class="view"><a href="{{ site.github.owner_url }}">View GitHub</a></p>
           <p class="view"><small><a href="https://doppllib.github.io/">Doppl Project</a></small></p>
@@ -49,6 +54,9 @@
 
   {% if site.google_analytics %}
     <script>
+    function showSubMenu(){
+      $(".submenu").show()
+    }
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
