--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
     <script>
     function showSubMenu(){
-      $(".submenu").show()
+      $(".submenu").toggle()
     }
     </script>
     <!--[if lt IE 9]>
@@ -30,14 +30,14 @@
         <span class="topmenu">
           <p class="view"><a href="/">Home</a></p>
           <p class="view"><a href="#" onclick="showSubMenu()">Basic Quickstart / Tutorials</a></p>
-          <p class="view submenu"><small><a href="/basicquickstart.html">Basic Quickstart</a></small></p>
-          <p class="view submenu"><small><a href="/basicsamples/dependencies.html">Dependencies</a></small></p>
-          <p class="view submenu"><small><a href="/basicsamples/testing.html">Testing</a></small></p>
-          <p class="view submenu"><small><a href="/basicsamples/androidstuff.html">Android Stuff</a></small></p>
+          <p class="view submenu"><small>&nbsp;&nbsp;<a href="/basicquickstart.html">Basic Quickstart</a></small></p>
+          <p class="view submenu"><small>&nbsp;&nbsp;<a href="/basicsamples/dependencies.html">Dependencies</a></small></p>
+          <p class="view submenu"><small>&nbsp;&nbsp;<a href="/basicsamples/testing.html">Testing</a></small></p>
+          <p class="view submenu"><small>&nbsp;&nbsp;<a href="/basicsamples/androidstuff.html">Android Stuff</a></small></p>
           <p class="view"><a href="/configj2objc.html">Config J2objc Runtime</a></p>
           <p class="view"><a href="{{ site.github.owner_url }}">View GitHub</a></p>
           <p class="view"><small><a href="https://doppllib.github.io/">Doppl Project</a></small></p>
-          <p class="nomargin"><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>&nbsp;/&nbsp;<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
+          <p class="nomargin"><small>Stack Overflow <a href="https://stackoverflow.com/questions/tagged/j2objc">j2objc</a>&nbsp;&nbsp;/&nbsp;<a href="https://stackoverflow.com/questions/tagged/j2objc-gradle">j2objc-gradle</a></small></p>
         </span>
         <p class="madeby">Made by <a href="https://touchlab.co" class="touchlablogo">
           <span class="t">T</span><span class="o">O</span><span class="u">U</span><span class="c">C</span><span class="h">H</span><span class="l">L</span><span class="a">A<span class="b">B</span>
