--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
           <p class="view"><a href="#" onclick="showSubMenu();return false;">Basic Quickstart / Tutorials</a></p>
           <p class="view submenu"><small>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/basicquickstart.html">Basic Quickstart</a></small></p>
           <p class="view submenu"><small>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/basicsamples/dependencies.html">Dependencies</a></small></p>
-          <p class="view submenu"><small>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/basicsamples/testing.html">Testing</a></small></p>
+          <p class="view submenu"><small>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/basicsamples/testing.html">Testing / CI Setup</a></small></p>
           <p class="view submenu"><small>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/basicsamples/androidstuff.html">Android Stuff</a></small></p>
           <p class="view"><a href="/configj2objc.html">Config J2objc Runtime</a></p>
           <p class="view"><a href="{{ site.github.owner_url }}">View GitHub</a></p>
