--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
           <p class="view submenu"><small>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/basicsamples/dependencies.html">Dependencies</a></small></p>
           <p class="view submenu"><small>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/basicsamples/testing.html">Testing / CI Setup</a></small></p>
           <p class="view submenu"><small>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/basicsamples/androidstuff.html">Android Stuff</a></small></p>
+          <p class="view"><a href="/libraries.html">Libraries</a></p>
           <p class="view"><a href="/configj2objc.html">Config J2objc Runtime</a></p>
           <p class="view"><a href="{{ site.github.owner_url }}">View GitHub</a></p>
           <p class="view"><small><a href="https://doppllib.github.io/">Doppl Project</a></small></p>
